<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_EnterExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_EnterExpenseAmtsTitle"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_AmountsTimeframe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4F44336"
                android:text="@string/str_AmountsTimePeriodLbl"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_TimePeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4F44336"
                android:checkedButton="@id/rad_Monthly">

                <RadioButton
                    android:id="@+id/rad_Monthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_MonthlyLbl"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rad_Annual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_AnnualLbl"
                    android:textSize="12sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_HousingUtilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A6FF9800"
                android:text="@string/str_HousingUtilitiesTitle"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A6FF9800"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_RentLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_RentLbl" />

                <EditText
                    android:id="@+id/et_Rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Rent amount"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A6FF9800"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_UtilLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_UtilitiesLbl" />

                <EditText
                    android:id="@+id/et_Utilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Utilities amount"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A6FF9800"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_InternetLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_InternetLbl" />

                <EditText
                    android:id="@+id/et_Internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Internet amount"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A6FF9800"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_PhoneLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_PhoneLbl" />

                <EditText
                    android:id="@+id/et_Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Phone amount"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_TotalHousingCosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_TotalHousingCostLbl"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_calc_TotalHousing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TBD"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_EducationCostsLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#C8CDDC39"
                android:text="@string/str_EducationTitle"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C8CDDC39"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_TuitionLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_TuitionLbl" />

                <EditText
                    android:id="@+id/et_Tuition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Tuition fees"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C8CDDC39"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_BookLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_BooksLbl" />

                <EditText
                    android:id="@+id/et_Books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Textbook cost"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C8CDDC39"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_OtherFeesLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_OtherFeesLbl" />

                <EditText
                    android:id="@+id/et_OtherFees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Other fee amount"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CDDC39"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_TotalEdCostsLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_TotalEdCostLbl"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_calc_TotalEdCosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TBD"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AE9C27B0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_TotalExpenses2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_TotalExpensesLbl"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_calc_TotalExpenses2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TBD"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_Accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_AcceptBtn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>